Fixed filtering function not showing due to ($) being added to filter string. Cleaned up .scss files

--- a/src/components/Chart/ChartBar.scss
+++ b/src/components/Chart/ChartBar.scss
@@ -11,7 +11,7 @@
   width: 100%;
   border: 1px solid #313131;
   border-radius: 12px;
-  background-color: #60e9e9;
+  background-color: rgb(0, 213, 241);
   overflow: hidden;
   display: flex;
   flex-direction: column;
