--- a/src/components/Expenses/ExpenseList.scss
+++ b/src/components/Expenses/ExpenseList.scss
@@ -1,6 +1,6 @@
 .expenses {
   padding: 1rem;
-  background-color: rgb(115, 221, 235);
+  background-color: rgb(0, 213, 241);
   margin: 2rem auto;
   width: 50rem;
   max-width: 95%;
@@ -12,5 +12,10 @@
     color: #fff;
     background-color: #1CBE7B;
     font-weight: bold;
+  }
+
+  & button:hover {
+    background-color: #139c63;
+    cursor: pointer;
   }
 }
