--- a/src/components/NewExpense/newExpense.scss
+++ b/src/components/NewExpense/newExpense.scss
@@ -1,5 +1,5 @@
 .new-expense {
-  background-color: rgb(115, 221, 235);
+  background-color: rgb(0, 213, 241);
   padding: 1rem;
   margin: 2rem auto;
   width: 50rem;
@@ -21,8 +21,7 @@
 
   & button:hover,
   & button:active {
-    background-color: #1684a5;
-    border-color: #0d80ad;
+    background-color: #086d2a;
   }
 
   & button.alternative {
